<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Astrid</string>
        <string name="importance_1">!!!!</string>
        <string name="importance_2">!!!</string>
        <string name="importance_3">!!</string>
        <string name="importance_4">!</string>
        <string name="repeat_days">Day(s)</string>
        <string name="repeat_weeks">Week(s)</string>
        <string name="repeat_months">Month(s)</string>
        <string name="repeat_hours">Hour(s)</string>
        <plurals name="Ntasks">
            
            <item quantity="one">1 Task</item>
            <item quantity="other">%d Tasks</item>
        </plurals>
        <plurals name="NactiveTasks">
            
            <item quantity="one">%d / %d Active</item>
            <item quantity="other">%d / %d Active</item>
        </plurals>
        <plurals name="Nalarms">
            
            <item quantity="one">One Alarm</item>
            <item quantity="two">Two Alarms</item>
            <item quantity="other">%d Alarms</item>
        </plurals>
        <plurals name="Ntags">
            
            <item quantity="one">1 Tag</item>
            <item quantity="other">%d Tags</item>
        </plurals>
        <string name="dateFormatter">MMM d</string>
        <string name="alarmDateFormatter">M/dd HH:mm</string>
        <string name="daysVertical">D\na\ny\ns</string>
        <string name="hoursVertical">H\no\nu\nr\ns</string>
        <plurals name="Ndays">
            
            <item quantity="one">1 Day</item>
            <item quantity="other">%d Days</item>
        </plurals>
        <plurals name="NdaysPreposition">
            
            <item quantity="one">1 Day</item>
            <item quantity="other">%d Days</item>
        </plurals>
        <plurals name="Nhours">
            
            <item quantity="one">1 Hour</item>
            <item quantity="other">%d Hours</item>
        </plurals>
        <plurals name="Nminutes">
            
            <item quantity="one">1 Minute</item>
            <item quantity="other">%d Minutes</item>
        </plurals>
        <plurals name="Nseconds">
            
            <item quantity="one">1 Second</item>
            <item quantity="other">%d Seconds</item>
        </plurals>
        <plurals name="NhoursShort">
            
            <item quantity="one">1 Hr</item>
            <item quantity="other">%d Hrs</item>
        </plurals>
        <plurals name="NminutesShort">
            
            <item quantity="one">1 Min</item>
            <item quantity="other">%d Min</item>
        </plurals>
        <plurals name="NsecondsShort">
            
            <item quantity="one">1 Sec</item>
            <item quantity="other">%d Sec</item>
        </plurals>
        <string name="ago_string">%s Ago</string>
        <string name="taskList_titlePrefix">Astrid: </string>
        <string name="taskList_titleTagPrefix">Tagged \"%s\":</string>
        <string name="taskList_titleUntagged">Untagged Tasks:</string>
        <string name="taskList_hiddenSuffix"> hidden</string>
        <string name="addtask_label">New Task</string>
        <string name="missing_tag">Could Not Find Requested Tag!</string>
        <string name="taskList_hiddenPrefix">H</string>
        <string name="taskList_dueRelativeTime">Due in</string>
        <string name="taskList_dueAbsoluteDate">Due on</string>
        <string name="taskList_goalPrefix">Goal</string>
        <string name="taskList_overdueBy">Overdue by</string>
        <string name="taskList_completedPrefix">Finished %s</string>
        <string name="taskList_estimatedTimePrefix">Estimated:</string>
        <string name="taskList_elapsedTimePrefix">Spent:</string>
        <string name="taskList_periodicReminderPrefix">Poke Every</string>
        <string name="taskList_repeatPrefix">Repeats Every</string>
        <string name="taskList_repeatsRemotely">Repeats On Remote Server</string>
        <string name="taskList_alarmPrefix">Next Alarm:</string>
        <string name="taskList_tagsPrefix">Tags:</string>
        <string name="taskList_notesPrefix">Notes:</string>
        <string name="taskList_createdPrefix">Created:</string>
        <string name="taskList_deleted">Deleted</string>
        <string name="quick_add_hint">Add New Task</string>
        <string name="taskList_menu_insert">New Task</string>
        <string name="taskList_menu_tags">Tags</string>
        <string name="taskList_menu_filters">Sort/Filters</string>
        <string name="taskList_menu_syncshortcut">Sync</string>
        <string name="taskList_menu_more">More</string>
        <string name="taskList_menu_sync">Synchronization</string>
        <string name="taskList_menu_settings">Settings</string>
        <string name="taskList_menu_help">Help (opens in Browser)</string>
        <string name="taskList_menu_survey">Take Astrid\'s Survey!</string>
        <string name="taskList_menu_tips">Quick Tips</string>
        <string name="taskList_menu_cleanup">Clean Up Old Tasks</string>
        <string name="taskList_menu_export">Backup Tasks</string>
        <string name="taskList_menu_import">Restore Tasks</string>
        <string name="taskList_context_edit">Edit Task</string>
        <string name="taskList_context_delete">Delete Task</string>
        <string name="taskList_context_startTimer">Start Timer</string>
        <string name="taskList_context_stopTimer">Stop Timer</string>
        <string name="taskList_context_postpone">Postpone</string>
        <string name="taskList_filter_title">Sort/Filters</string>
        <string name="taskList_filter_hidden">Hidden/Blocked Tasks</string>
        <string name="taskList_filter_done">Completed Tasks</string>
        <string name="taskList_filter_tagged">Tagged \'%s\'</string>
        <string name="taskList_sort_auto">Auto Sort</string>
        <string name="taskList_sort_alpha">Sort By Name</string>
        <string name="taskList_sort_duedate">Sort By Due Date</string>
        <string name="taskList_sort_reverse">Sort Reverse</string>
        <string name="taskList_nonag_reminder">Select an Action:</string>
        <string name="taskList_postpone_count">Times You\'ve Postponed: %d</string>
        <string name="taskList_postpone_dialog">Postpone for how long?</string>
        <string name="taskList_cleanup_dialog">"Delete completed tasks older than # days:"</string>
        <string name="taskEdit_titleGeneric">Astrid: Editing Task</string>
        <string name="taskEdit_titlePrefix">Astrid: Editing </string>
        <string name="taskEdit_label">Astrid: New Task</string>
        <string name="taskEdit_tab_basic">Basic</string>
        <string name="taskEdit_tab_dates">Dates</string>
        <string name="taskEdit_tab_alerts">Alerts</string>
        <string name="name_label">Summary</string>
        <string name="name_hint">Task Name</string>
        <string name="importance_label">How Important is it?</string>
        <string name="tags_label">Tags:</string>
        <string name="tag_hint">Tag Name</string>
        <string name="estimatedDuration_label">How Long Will it Take?</string>
        <string name="elapsedDuration_label">Time Already Spent on Task</string>
        <string name="definiteDueDate_label">Absolute Deadline</string>
        <string name="preferredDueDate_label">Goal Deadline</string>
        <string name="addToCalendar_label">Add Task To Calendar</string>
        <string name="showCalendar_label">Open Calendar Event</string>
        <string name="hiddenUntil_label">Hide Until This Date</string>
        <string name="repeat_label">Repeat Every</string>
        <string name="repeat_value_unset">No Repeat Set</string>
        <string name="blockingOn_label">Hide Until This Task is Done</string>
        <string name="notes_label">Notes</string>
        <string name="notes_hint">Enter Task Notes</string>
        <string name="notification_label">Periodic Reminders</string>
        <string name="notification_prefix">Every</string>
        <string name="flags_label">Notify me...</string>
        <string name="flag_before">As Deadlines Approach</string>
        <string name="flag_during">At Deadlines</string>
        <string name="flag_after">After Absolute Deadline Passes</string>
        <string name="flag_nonstop">Alarm Clock Mode</string>
        <string name="alerts_label">Fixed Reminders</string>
        <string name="add_alert">Add New Reminder</string>
        <string name="hour_minutes_dialog">Time (hours : minutes)</string>
        <string name="notification_dialog">Remind Me Every</string>
        <string name="repeat_picker_title">Repeat Every (0 to disable)</string>
        <string name="repeat_help_dialog_title">Help: Astrid Repeats</string>
        <string name="repeat_help_dialog">
To use repeats, set at least one of the deadlines above. When you complete this task, the deadline will be automatically advanced.
\n\n
If you don\'t want to see the new task right after you complete the old one, you should use the "Hide Until" field, which will also be advanced automatically.
\n
        </string>
        <string name="repeat_help_hide">Don't Show Help Anymore</string>
        <string name="save_label">Save</string>
        <string name="discard_label">Discard</string>
        <string name="edit_label">Edit</string>
        <string name="delete_label">Delete</string>
        <string name="blank_button_title">Click to Set</string>
        <string name="startTimer_label">Start Timer</string>
        <string name="stopTimer_label">Stop Timer</string>
        <string name="taskEdit_menu_save">Save</string>
        <string name="taskEdit_onTaskSave_Due">Task Saved: due in %s</string>
        <string name="taskEdit_onTaskSave_Overdue">Task Saved: due %s ago</string>
        <string name="taskEdit_onTaskSave_notDue">Task Saved</string>
        <string name="taskView_notifyTitle">Astrid says...</string>
        <string name="tagList_titlePrefix">Astrid: Tag View: </string>
        <string name="tagList_context_create">Create Task With Tag</string>
        <string name="tagList_context_edit">Edit Tag</string>
        <string name="tagList_context_delete">Delete Tag</string>
        <string name="tagList_context_showTag">Show on Home Page</string>
        <string name="tagList_context_hideTag">Hide on Home Page</string>
        <string name="tagList_context_shortcut">Create Shortcut</string>
        <string name="tagList_shortcut_created">Shortcut created on your home screen!</string>
        <string name="tagList_shortcut_prefix">Tag:</string>
        <string name="tagList_untagged">[untagged]</string>
        <string name="tagList_menu_sortAlpha">Sort A-Z</string>
        <string name="tagList_menu_sortSize">Sort by Size</string>
        <string name="sync_pref_group">Synchronization Services</string>
        <string name="sync_pref_group_actions">Actions</string>
        <string name="sync_pref_group_options">Options</string>
        <string name="sync_rtm_title">Remember The Milk</string>
        <string name="sync_rtm_desc">http://www.rememberthemilk.com</string>
        <string name="sync_interval_title">Auto-Synchronize</string>
        <string name="sync_interval_desc">If set, synchronization occurs automatically given interval</string>
        <string name="sync_button_title">Main Menu Shortcut</string>
        <string name="sync_button_desc">Show \"Synchronize\" in Astrid\'s menu</string>
        <string name="sync_quiet_title">Hide Dialogs</string>
        <string name="sync_quiet_desc">Hide the Sync Results dialogs</string>
        <string name="sync_bgwifi_title">Auto-Sync Wifi Only</string>
        <string name="sync_bgwifi_desc">If set, auto-sync only happens when Wifi is active</string>
        <string name="sync_error">Sync Error! Sorry for the inconvenience! Error:</string>
        <string name="sync_now">Synchronize Now!</string>
        <string name="sync_forget">Clear Personal Data</string>
</resources>