<?xml version="1.0" encoding="utf-8"?>
<!--
  ASTRID: Android's Simple Task Recording Dashboard
 
  Copyright (c) 2009 Tim Su
 
  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation; either version 2 of the License, or
  (at your option) any later version.
 
  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
  for more details.
 
  You should have received a copy of the GNU General Public License along
  with this program; if not, write to the Free Software Foundation, Inc.,
  59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout android:id="@+id/event"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <!-- TASK NAME -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip">
        
            <TextView android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                style="@style/TextAppearance.EditEvent_Label"/>
    
            <EditText android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:capitalize="words"/>
        </LinearLayout>
        
        <!-- VITAL PROPERTIES -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_dark"
        />
        
        <LinearLayout android:id="@+id/properties_container"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip">
                
            <TextView android:id="@+id/importance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importance_label"
                style="@style/TextAppearance.EditEvent_Label"/>
    
            <Spinner android:id="@+id/importance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            
            <TextView android:id="@+id/estimatedDuration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimatedDuration_label"
                style="@style/TextAppearance.EditEvent_Label"/>
    
            <Button android:id="@+id/estimatedDuration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            
            <TextView android:id="@+id/notification_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_label"
                style="@style/TextAppearance.EditEvent_Label"/>
    
            <Button android:id="@+id/notification"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
                
            <TextView android:id="@+id/tags_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags_label"
                style="@style/TextAppearance.EditEvent_Label"/>
            
            <LinearLayout android:id="@+id/tags_container"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </LinearLayout>
            
        <!-- DATES -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_dark"
        />
        
        <LinearLayout android:id="@+id/dates_container"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip">
            
            <TextView android:id="@+id/definiteDueDate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/definiteDueDate_label"
                style="@style/TextAppearance.EditEvent_Label"/>
    
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
                <CheckBox android:id="@+id/definiteDueDate_notnull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                
                <Button android:id="@+id/definiteDueDate_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                
                <Button android:id="@+id/definiteDueDate_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                    
            </LinearLayout>
    
            <TextView android:id="@+id/preferredDueDate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferredDueDate_label"
                style="@style/TextAppearance.EditEvent_Label"/>
    
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
                <CheckBox android:id="@+id/preferredDueDate_notnull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                
                <Button android:id="@+id/preferredDueDate_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                
                <Button android:id="@+id/preferredDueDate_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                    
            </LinearLayout>
        </LinearLayout>
        
        <!-- HIDING -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_dark"
        />
        
        <LinearLayout android:id="@+id/hiding_container"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip">
            
            <TextView android:id="@+id/hiddenUntil_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiddenUntil_label"
                style="@style/TextAppearance.EditEvent_Label"/>
    
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
                <CheckBox android:id="@+id/hiddenUntil_notnull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                
                <Button android:id="@+id/hiddenUntil_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                
                <Button android:id="@+id/hiddenUntil_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                    
            </LinearLayout>
            
            <!--<TextView android:id="@+id/blockingon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blockingon_label"
                style="@style/TextAppearance.EditEvent_Label"/>
    
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
                <CheckBox android:id="@+id/blockingOn_notnull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                    
                <Spinner android:id="@+id/blockingon"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                    
            </LinearLayout>-->
        </LinearLayout>

        <!-- MISC FIELDS -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_dark"
        />
        
        <LinearLayout android:id="@+id/misc_container"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip">
            
            <TextView android:id="@+id/notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes_label"
                style="@style/TextAppearance.EditEvent_Label"/>
                
            <EditText android:id="@+id/notes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:gravity="top"
                android:hint="@string/notes_hint"
                android:capitalize="sentences"
                android:singleLine="false" />
                
            
            <TextView android:id="@+id/elapsedDuration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elapsedDuration_label"
                style="@style/TextAppearance.EditEvent_Label"/>
    
            <Button android:id="@+id/elapsedDuration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- SAVE -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_dark"
        />
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:baselineAligned="false">
            
            <Button android:id="@+id/save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_label"
            />
            
            <Button android:id="@+id/discard"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/discard_label"
            />
            
            <Button android:id="@+id/delete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_label"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
