<?xml version="1.0" encoding="utf-8"?>
<!--
  ASTRID: Android's Simple Task Recording Dashboard
 
  Copyright (c) 2009 Tim Su
 
  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation; either version 2 of the License, or
  (at your option) any later version.
 
  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
  for more details.
 
  You should have received a copy of the GNU General Public License along
  with this program; if not, write to the Free Software Foundation, Inc.,
  59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-->
<LinearLayout android:id="@+id/footer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_gravity="bottom"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:text="@string/sync_pref_group_actions"/>
    
    <Button android:id="@+id/forget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_forget"/>
    
    <Button android:id="@+id/sync"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_now"/>
        
</LinearLayout>